# research

./: .~lock.third_successful_gain.csv#  LICENSE  Makefile  README.md  book_page_parse.ipynb  default.env  parse_results_study.ipynb  pyproject.toml  setup.cfg
parser/: __main__.py  book_page_parse.py  book_site_parser.py  config.py  save_dataclass_list_into_csv.py
research/: __main__.py  config.py  domain.py  storage.py
research/parsers/: pages.py  sites.py
research/tools/: cli.py  run.py
